--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <title>Title</title>
 </head>
 <body>
-$END$
+<form th:action="@{/play}" method="post">
+    <input type="text" class="form-control" id="choice" maxlength="1" th:field="*{input.choice}">
+    <label for="choice"></label>
+    <button type="submit">PLAY</button>
+</form>
 </body>
 </html>
