wait for input and show line and word

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
+<h1 th:text="${game.getWord()}"></h1>
+<h1 th:text="${game.getWordAtLine()}"></h1>
 <form th:action="@{/play}" method="post">
     <input type="text" class="form-control" id="choice" maxlength="1" th:field="*{input.choice}">
     <label for="choice"></label>
