--- a/src/main/resources/templates/game_end.html
+++ b/src/main/resources/templates/game_end.html
@@ -6,5 +6,8 @@
 </head>
 <body>
 <h1 th:text="${message}"></h1>
+<form th:action="@{/new_game}" method="post">
+    <button type="submit">New Game</button>
+</form>
 </body>
 </html>
